<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="6dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btnstyle"
        android:gravity="center_horizontal"
        android:padding="@dimen/dp_5"
        android:text="要求及收费"
        android:textColor="@color/white"
        android:textSize="@dimen/typeface14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/btnstyle1"
        android:paddingLeft="@dimen/dp_10"
        android:paddingRight="@dimen/dp_10">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/totel_pay_hint1"
            android:textColor="#646464"
            android:textSize="@dimen/typeface14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hotel_pay_hint2"
            android:textColor="#646464"
            android:textSize="@dimen/typeface14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hotel_pay_hint3"
            android:textColor="#646464"
            android:textSize="@dimen/typeface14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hotel_pay_hint4"
            android:textColor="#646464"
            android:textSize="@dimen/typeface14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hotel_pay_hint5"
            android:textColor="#646464"
            android:textSize="@dimen/typeface14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hotel_pay_hint6"
            android:textColor="#646464"
            android:textSize="@dimen/typeface14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hotel_pay_hint7"
            android:textColor="#646464"
            android:textSize="@dimen/typeface14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hotel_pay_hint8"
            android:textColor="#646464"
            android:textSize="@dimen/typeface14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hotel_pay_hint9"
            android:textColor="#646464"
            android:textSize="@dimen/typeface14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hotel_pay_hint10"
            android:textColor="#646464"
            android:textSize="@dimen/typeface14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hotel_pay_hint11"
            android:textColor="#646464"
            android:textSize="@dimen/typeface14sp" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="@dimen/dp_10">


            <Button
                android:id="@+id/bt_cancel"
                android:layout_width="@dimen/dp_115"
                android:layout_height="@dimen/dp_30"
                android:layout_marginRight="@dimen/dp_10"
                android:layout_toLeftOf="@+id/view"
                android:background="#ECECEC"
                android:text="取消" />

            <View
                android:id="@+id/view"
                android:layout_width="1dp"
                android:layout_height="1dp"
                android:layout_centerInParent="true" />

            <Button
                android:id="@+id/bt_go_on"
                android:layout_width="@dimen/dp_115"
                android:layout_height="@dimen/dp_30"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_toRightOf="@+id/view"
                android:background="@drawable/shape_button"
                android:text="同意并继续"
                android:textColor="@color/white" />
        </RelativeLayout>

    </LinearLayout>

</LinearLayout>