<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp">
        <ImageView
            android:id="@+id/login_back_image"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginTop="@dimen/dp_15"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_gravity="center"
            android:src="@mipmap/icon_back_black"/>
    </LinearLayout>

    <TextView
        android:textColor="@color/black_28"
        android:textSize="@dimen/typeface21sp"
        android:text="@string/login_txt"
        android:layout_width="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginBottom="@dimen/dp_10"
        android:layout_gravity="center"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/et_loginphonenum"
    android:layout_marginTop="@dimen/dp_10"
    android:drawableLeft="@mipmap/registered_phonenum"
    android:layout_marginLeft="@dimen/dp_10"
    android:padding="@dimen/dp_10"
    android:layout_marginRight="@dimen/dp_10"
    android:background="@drawable/shape_edit"
    android:layout_width="match_parent"
    android:textSize="@dimen/typeface12sp"
    android:hint="@string/login_phonenum"
    android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/et_loginpwd"
        android:layout_marginTop="@dimen/dp_20"
        android:drawableLeft="@mipmap/editverification_code"
        android:layout_marginLeft="@dimen/dp_10"
        android:padding="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"
        android:background="@drawable/shape_edit"
        android:layout_width="match_parent"
        android:textSize="@dimen/typeface12sp"
        android:hint="@string/login_pwd"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/btn_login"
        android:layout_marginTop="@dimen/dp_25"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"
        android:padding="@dimen/dp_10"
        android:text="@string/login_txt"
        android:textColor="@color/colorWhite"
        android:background="@drawable/shape_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/btn_newregistered"
        android:layout_marginTop="@dimen/dp_20"
        android:textColor="#5ED3AE"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_width="wrap_content"
        android:textSize="@dimen/typeface14sp"
        android:text="@string/login_newuser"
        android:layout_height="wrap_content" />
        <TextView
            android:layout_marginTop="@dimen/dp_20"
            android:textColor="#5ED3AE"
            android:layout_marginRight="@dimen/dp_10"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_width="wrap_content"
            android:textSize="@dimen/typeface14sp"
            android:text="@string/login_forgotpassword"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <LinearLayout
        android:layout_marginTop="@dimen/dp_20"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content">
        <View
            android:background="@color/black_28"
            android:layout_width="120dp"
            android:layout_height="1dp"/>
        <TextView
            android:padding="@dimen/dp_20"
            android:text="@string/login_fast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <View
            android:background="@color/black_28"
            android:layout_width="120dp"
            android:layout_height="1dp"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/iv_fingerprint_login"
           android:layout_weight="1"
            android:src="@mipmap/icon_zhiwen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageView
            android:layout_weight="1"
            android:src="@mipmap/icon_weixin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageView
            android:layout_weight="1"
            android:src="@mipmap/icon_weibo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:background="@mipmap/icon_login_beijin"/>
</LinearLayout>
